5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1667_2324.log
== TEST (2019-04-16 16:11:08) 
-- CODE:
m=input("nome do bruxo: ")
if (m.upper=="MINERVA"):
	v=10.7654/0.3479
	print(v)
if (m.upper=="BELATRIX"):
	v=10.674/1.789
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = nao
NameError: name 'nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:40) 
-- CODE:
m=input("nome do bruxo: ")
if (m.upper=="MINERVA"):
	v=10.7654/0.3479
	print(v)
if (m.upper=="BELATRIX"):
	v=10.674/1.789
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = nao
NameError: name 'nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:15) 
-- CODE:
m=input("nome do bruxo: ")
if (m.upper()=="MINERVA"):
	v=10.7654/0.3479
	print(v)
if (m.upper()=="BELATRIX"):
	v=10.674/1.789
	print(v)
-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:13:31) 
-- CODE:
m=input("nome do bruxo: ")
if (m.upper()=="MINERVA"):
	v=10.7654/0.3479
	print(v)
if (m.upper()=="BELATRIX"):
	v=10.674/1.789
	print(v)
-- EXECUTION TIME:
0.16599
-- TEST CASE 1:
---- input:
BELATRIX
---- correct output:
5.966461710452767
---- user output:
5.966461710452767
-- TEST CASE 2:
---- input:
MINERVA
---- correct output:
30.943949410750214
---- user output:
30.943949410750214
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
